crates/ars-components/src/layout/portal/snapshots/ars_components__layout__portal__tests__portal_root_body_target_mounted.snap
---
source: crates/ars-components/src/layout/portal.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-portal-id",
            ),
            String(
                "body-target",
            ),
        ),
        (
            Data(
                "ars-portal-owner",
            ),
            String(
                "body-target",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "portal",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "mounted",
            ),
        ),
        (
            Id,
            String(
                "ars-portal-body-target",
            ),
        ),
    ],
    styles: [],
}
